tob/tps/.svn/pristine/2e/2e0c9117c7305438ecbded5bd304c7ae6e0d3197.svn-base
allumettes/Jouer.java:41: error: cannot find symbol
						case Expert.nom: strategie = new Expert();
						     ^
  symbol:   variable Expert
  location: class Jouer
allumettes/Jouer.java:41: error: cannot find symbol
						case Expert.nom: strategie = new Expert();
						                                 ^
  symbol:   class Expert
  location: class Jouer
2 errors
